# megadep

./: Cargo.toml  README.md
.cargo/: config.toml
crates/beta/src/: lib.rs
examples/: alphabeta.rs
examples/crates/: Cargo.toml
examples/crates/alpha/: Cargo.toml
examples/crates/alpha/src/: lib.rs  structs.rs
examples/crates/beta/: Cargo.toml
examples/crates/beta/src/: lib.rs
src/: config.rs  lib.rs  main.rs  nstring.rs
