[package]
name = "megadep"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/alpha",
    "crates/beta",
]

[dependencies]
getopts = "0.2"
holochain_trace = "*"

# rustc_errors = { path = "/home/michael/gitfork/rust/compiler/rustc_errors" }
# rustc_error_codes = { path = "/home/michael/gitfork/rust/compiler/rustc_error_codes" }
# rustc_hir = { path = "/home/michael/gitfork/rust/compiler/rustc_hir" }
# rustc_interface = { path = "/home/michael/gitfork/rust/compiler/rustc_interface" }
# rustc_session = { path = "/home/michael/gitfork/rust/compiler/rustc_session" }
# rustc_span = { path = "/home/michael/gitfork/rust/compiler/rustc_span" }
