[package]
name = "megadep"
version = "0.1.0"
edition = "2021"

# note that for VS code, the following settings are useful too:
#     "rust-analyzer.cargo.sysroot": "discover",
#     "rust-analyzer.rustc.source": "discover",
[package.metadata.rust-analyzer] 
rustc_private=true 

[dependencies]
getopts = "0.2"
holochain_trace = "*"
regex = "*"
